tests/compile_fail/incomplete_value_syntax.stderr
error: unexpected end of input, expected expression
 --> tests/compile_fail/incomplete_value_syntax.rs:8:18
  |
8 |     #[attr(a = b =)]
  |                  ^

error: expected `=`
 --> tests/compile_fail/incomplete_value_syntax.rs:9:13
  |
9 |     #[attr(b)]
  |             ^

error: Value not set for `a`.
  --> tests/compile_fail/incomplete_value_syntax.rs:10:5
   |
10 |     Variant1,
   |     ^^^^^^^^

error: Value not set for `b`.
  --> tests/compile_fail/incomplete_value_syntax.rs:10:5
   |
10 |     Variant1,
   |     ^^^^^^^^
